--- a/build.xml
+++ b/build.xml
@@ -10,8 +10,8 @@
 
   <!-- The major and minor version numbers  -->
   <property name="version-major"   value="0"/>
-  <property name="version-minor"   value="6"/>
-  <property name="version-status"  value="-dev"/>
+  <property name="version-minor"   value="5.1"/>
+  <property name="version-status"  value="-RC0"/>
   <property name="version"
             value="${version-major}.${version-minor}${version-status}"/>
   
