--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
   <!-- The major and minor version numbers  -->
   <property name="version-major"   value="0"/>
   <property name="version-minor"   value="5.1"/>
-  <property name="version-status"  value="-RC0"/>
+  <property name="version-status"  value=""/>
   <property name="version"
             value="${version-major}.${version-minor}${version-status}"/>
   
