git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119770 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -530,4 +530,9 @@
     <mkdir  dir="${build.dir}"/>
   </target>
 
+  <target name="clean-dist-area" description="Clean distribution area">
+    <delete dir="${dist.root}"/>
+    <mkdir  dir="${dist.root}"/>
+  </target>
+
 </project>
