--- a/build.xml
+++ b/build.xml
@@ -4,11 +4,12 @@
   <property name="name"            value="arq"/>
   
   <!-- The major and minor version numbers  -->
-  <property name="version-major"   value="2"/>
-  <property name="version-minor"   value="5"/>
-  <property name="version-status"  value="-dev"/>
+  <property name="version-major"      value="2"/>
+  <property name="version-minor"      value="4"/>
+  <property name="version-revision"   value="1"/>
+  <property name="version-status"     value=""/>
   <property name="version"
-            value="${version-major}.${version-minor}${version-status}"/>
+            value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
 
   <property name="dist.name"       value="${Name}-${version}"/>
 
