--- a/ivy.xml
+++ b/ivy.xml
@@ -19,10 +19,9 @@
   <publications>
     <artifact name="tdb" type="jar"/>
     <artifact name="tdb" type="xml"    ext="pom"/>
-    <!-- NOT the names that Maven expects - converted in publication
+    <!-- NOT the names that Maven expects - converted in publication -->
     <artifact name="tdb-src"     type="jar"/>
     <artifact name="tdb-javadoc" type="jar"/>
-    -->
   </publications>
 
   <dependencies>
