git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119893 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j.properties
+++ b/log4j.properties
@@ -10,17 +10,13 @@ log4j.appender.stderr.target=System.err
 log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 log4j.appender.stderr.layout.ConversionPattern=%d{HH:mm:ss} %-5p %-15c{1} :: %m%n
 
-# SDB
-log4j.logger.com.hp.hpl.jena.sdb=INFO
-
-# SQL statements
-log4j.logger.SQL=ALL
+# Jena
+log4j.logger.com.hp.hpl.jena=WARN
 
 # ARQ
 log4j.logger.com.hp.hpl.jena.query=INFO
-
-# Jena
-log4j.logger.com.hp.hpl.jena=WARN
+log4j.logger.com.hp.hpl.jena.update=INFO
+log4j.logger.com.hp.hpl.jena.sparql=INFO
 
 # TDB
 log4j.logger.com.hp.hpl.jena.tdb=INFO
