--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 
 <!--
 Start of a development POM for TDB.
-See tdb.pom for the published version.
+See tdb.pom for the published, stripped down, temporary version.
 Unfinished.
 -->
 
