git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119906 13f79535-47bb-0310-9956-ffa450edef68

--- a/ivy.xml
+++ b/ivy.xml
@@ -20,9 +20,8 @@
   <publications>
     <artifact name="tdb" type="jar"/>
     <artifact name="tdb" type="xml" ext="pom"/>
-    <!-- <artifact name="tdb-sources" type="jar"/> -->
-
-    <!-- <artifact name="tdb" type="source" ext="jar" mvn:classifier="sources"/> -->
+    <!-- <artifact name="tdb" mvn:classifier="sources" type="jar"/> -->
+    <!-- <artifact name="tdb" mvn:classifier="javadoc" type="jar"/> -->
   </publications>
 
   <dependencies>
