--- a/log4j.properties
+++ b/log4j.properties
@@ -19,5 +19,8 @@ log4j.logger.com.hp.hpl.jena.update=INFO
 log4j.logger.com.hp.hpl.jena.sparql=INFO
 
 # TDB
-log4j.logger.com.hp.hpl.jena.tdb=INFO
+log4j.logger.com.hp.hpl.jena.tdb=WARN
+log4j.logger.com.hp.hpl.jena.tdb.sys.Const=INFO
+log4j.logger.com.hp.hpl.jena.tdb.pgraph.GraphTDBFactory=INFO
+
 #log4j.logger.com.hp.hpl.jena.tdb.base.block.BlockMgrCache=DEBUG
