git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1119972 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j.properties
+++ b/log4j.properties
@@ -20,7 +20,7 @@ log4j.logger.com.hp.hpl.jena.sparql=INFO
 
 # TDB
 log4j.logger.com.hp.hpl.jena.tdb=WARN
-log4j.logger.com.hp.hpl.jena.tdb.sys.Const=INFO
+log4j.logger.com.hp.hpl.jena.tdb.TDB=INFO
 log4j.logger.com.hp.hpl.jena.tdb.pgraph.GraphTDBFactory=INFO
 
 #log4j.logger.com.hp.hpl.jena.tdb.base.block.BlockMgrCache=DEBUG
