git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120051 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -32,6 +32,9 @@
   <property name="src.lib.test.dir"       value="src-lib-test"/>
   <property name="src.examples.dir"       value="src-examples"/>
   <property name="src.dev.dir"            value="src-dev"/>
+
+  <!-- Resource name -->
+  <property name="build.metadata.file"    value="com/hp/hpl/jena/tdb/tdb-properties.xml"/>
   
   <path id="java.source.path.main">
     <pathelement path="${src.dir}"/>
