--- a/build.xml
+++ b/build.xml
@@ -33,8 +33,9 @@
   <property name="src.examples.dir"       value="src-examples"/>
   <property name="src.dev.dir"            value="src-dev"/>
 
-  <!-- Resource name -->
-  <property name="build.metadata.file"    value="com/hp/hpl/jena/tdb/tdb-properties.xml"/>
+  <!-- Metadata -->
+  <property name="build.metadata.file.src"     value="tdb-properties.xml"/>
+  <property name="build.metadata.file.dest"    value="com/hp/hpl/jena/tdb/tdb-properties.xml"/>
   
   <path id="java.source.path.main">
     <pathelement path="${src.dir}"/>
