git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120058 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -34,8 +34,8 @@
   <property name="src.dev.dir"            value="src-dev"/>
 
   <!-- Metadata -->
+  <property name="build.metadata.file"	       value="com/hp/hpl/jena/tdb/tdb-properties.xml"/>
   <property name="build.metadata.file.src"     value="tdb-properties.xml"/>
-  <property name="build.metadata.file.dest"    value="com/hp/hpl/jena/tdb/tdb-properties.xml"/>
   
   <path id="java.source.path.main">
     <pathelement path="${src.dir}"/>
