--- a/log4j.properties
+++ b/log4j.properties
@@ -19,7 +19,14 @@ log4j.logger.com.hp.hpl.jena.update=INFO
 log4j.logger.com.hp.hpl.jena.sparql=INFO
 
 # TDB
-log4j.logger.com.hp.hpl.jena.tdb=WARN
-#log4j.logger.com.hp.hpl.jena.tdb.TDB=INFO
+log4j.logger.com.hp.hpl.jena.tdb=INFO
+
+## General information about this instantiation
+## General information at level INFO
+## Use WARN for none (normally)
+log4j.logger.com.hp.hpl.jena.tdb.info=WARN
+
+## The execution of filtered BGPs
+log4j.logger.com.hp.hpl.jena.tdb.solver.OpCompilerTDB=INFO
 
 #log4j.logger.com.hp.hpl.jena.tdb.base.block.BlockMgrCache=DEBUG
