git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120155 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -62,7 +62,10 @@
   </fileset>
 
 <!--
-   <pathconvert pathsep="," property="fileset.src" refid="java.source.path"/>
+   <pathconvert pathsep="," property="fileset.src" refid="java.source.path">
+   All java files
+   </pathconvert>
+  
    <echo>${fileset.src}</echo>
 -->
   <import file="build-lib.xml"/>
