--- a/log4j.properties
+++ b/log4j.properties
@@ -25,6 +25,9 @@ log4j.logger.com.hp.hpl.jena.tdb=INFO
 ## General information at level INFO
 ## Use WARN for none (normally)
 log4j.logger.com.hp.hpl.jena.tdb.info=WARN
+## Logger for execution details.
+## Debug for all graph access (including non-TDB).
+log4j.logger.com.hp.hpl.jena.tdb.exec=WARN
 
 ## The execution of filtered BGPs
 log4j.logger.com.hp.hpl.jena.tdb.solver.OpCompilerTDB=INFO
