git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120200 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j.properties
+++ b/log4j.properties
@@ -25,9 +25,11 @@ log4j.logger.com.hp.hpl.jena.tdb=INFO
 ## General information at level INFO
 ## Use WARN for none (normally)
 log4j.logger.com.hp.hpl.jena.tdb.info=WARN
+
 ## Logger for execution details.
+## Need to switch on with the dynamic switch "TDB.setExecutionLogging(true)" as well.
 ## Debug for all graph access (including non-TDB).
-log4j.logger.com.hp.hpl.jena.tdb.exec=WARN
+log4j.logger.com.hp.hpl.jena.tdb.exec=INFO
 
 ## The execution of filtered BGPs
 log4j.logger.com.hp.hpl.jena.tdb.solver.OpCompilerTDB=INFO
