git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120206 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j.properties
+++ b/log4j.properties
@@ -27,11 +27,8 @@ log4j.logger.com.hp.hpl.jena.tdb=INFO
 log4j.logger.com.hp.hpl.jena.tdb.info=WARN
 
 ## Logger for execution details.
-## Need to switch on with the dynamic switch "TDB.setExecutionLogging(true)" as well.
-## Debug for all graph access (including non-TDB).
+## Need to switch on with the dynamic switch 
+## "TDB.setExecutionLogging(true)" as well.
 log4j.logger.com.hp.hpl.jena.tdb.exec=INFO
-
-## The execution of filtered BGPs
-log4j.logger.com.hp.hpl.jena.tdb.solver.OpCompilerTDB=INFO
 
 #log4j.logger.com.hp.hpl.jena.tdb.base.block.BlockMgrCache=DEBUG
