--- a/build.xml
+++ b/build.xml
@@ -9,10 +9,10 @@
   <property environment="env"/>
 
   <!-- The major and minor version numbers  -->
-  <property name="version-major"   	    value="0"/>
-  <property name="version-minor"        value="5"/>
-  <property name="version-revision"     value="4"/>
-  <property name="version-status"       value="-dev"/>
+  <property name="version-major"   	value="0"/>
+  <property name="version-minor"        value="6"/>
+  <property name="version-revision"     value="0"/>
+  <property name="version-status"       value=""/>
   <property name="version"
             value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
   
