git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120326 13f79535-47bb-0310-9956-ffa450edef68

--- a/ivy.xml
+++ b/ivy.xml
@@ -51,6 +51,9 @@
       <exclude org="javax.jms" module="jms"/>
       <exclude org="javax.mail" module="mail"/>
     </dependency>
+    
+    <dependency org="com.sleepycat" name="je" rev="3.3.74"/>
+
   -->
   </dependencies>
 
