--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
   <property name="version-major"      value="2"/>
   <property name="version-minor"      value="6"/>
   <property name="version-revision"   value="0"/>
-  <property name="version-status"     value="-dev"/>
+  <property name="version-status"     value=""/>
   <property name="version"
             value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
 
