git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120466 13f79535-47bb-0310-9956-ffa450edef68

--- a/log4j.properties
+++ b/log4j.properties
@@ -22,9 +22,8 @@ log4j.logger.com.hp.hpl.jena.sparql=INFO
 log4j.logger.com.hp.hpl.jena.tdb=INFO
 
 ## General information about this instantiation
-## General information at level INFO
-## Use WARN for none (normal setting)
-log4j.logger.com.hp.hpl.jena.tdb.info=WARN
+## General information at level DEBUG
+log4j.logger.com.hp.hpl.jena.tdb.info=INFO
 
 ## Logger for execution details.
 ## Need to switch on with the dynamic switch 
