--- a/build.xml
+++ b/build.xml
@@ -270,7 +270,7 @@
                  doctitle="${Name} Query Processor"
                  Public="true"
                  Use="true"
-                 bottom="Copyright &#169; 2006, 2007, 2008 Hewlett-Packard Development Company, LP"
+                 bottom="Copyright &#169; 2006, 2007, 2008, 2009 Hewlett-Packard Development Company, LP"
                  additionalparam="-breakiterator">
             <classpath refid="classpath"/>
             <package name="com.hp.hpl.jena.query.sdb"/>
