--- a/build.xml
+++ b/build.xml
@@ -227,7 +227,7 @@
      doctitle="${Name} Query Processor"
      Public="true"
      Use="true"
-     bottom="Copyright &#169; 2004, 2005, 2006, 2007, 2008 Hewlett-Packard Development Company, LP"
+     bottom="Copyright &#169; 2004, 2005, 2006, 2007, 2008, 2009 Hewlett-Packard Development Company, LP"
      additionalparam="-breakiterator">
         <classpath refid="classpath"/>
         <package name="com.hp.hpl.jena.query"/>
@@ -250,7 +250,7 @@
      doctitle="${Name} Query Processor"
      Public="true"
      Use="true"
-     bottom="Copyright &#169; 2004, 2005, 2006, 2007, 2008 Hewlett-Packard Development Company, LP"
+     bottom="Copyright &#169; 2004, 2005, 2006, 2007, 2008, 2009 Hewlett-Packard Development Company, LP"
      additionalparam="-breakiterator">
     </javadoc>
   </target>
