git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120604 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
   
   <!-- javadoc -->
   <property name="copyright.text"
-	    value="Copyright &#169; 2007, 2008 Hewlett-Packard Development Company, LP"/>
+	    value="Copyright &#169; 2007, 2008, 2009 Hewlett-Packard Development Company, LP"/>
   <property name="javadoc.packages"     value="com.hp.hpl.jena.tdb"/>
   <property name="javadoc.all.packages" value="com.hp.hpl.jena.tdb.*"/>
   
