git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120621 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -56,9 +56,9 @@
 
   <fileset dir="." id="fileset.src">
     <include name="${src.dir}/**/*.java"/>
-    <include name="${src.test.dir}**/*.java"/>
-    <include name="${src.lib.dir}**/*.java"/>
-    <include name="${src.lib.test.dir}**/*.java"/>
+    <include name="${src.test.dir}/**/*.java"/>
+    <include name="${src.lib.dir}/**/*.java"/>
+    <include name="${src.lib.test.dir}/**/*.java"/>
   </fileset>
 
 <!--
