git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1120642 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -104,6 +104,7 @@
   <!-- ==== Grammars, Compilation and JAR -->
 
   <target name="pre-compile" depends="clean-build-dirs,javac-flags">
+    <mkdir dir="${classes.build.dir}"/>
   </target>
 
   <target name="build-src" depends="clean-build-dirs">
