git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120645 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -71,4 +71,8 @@
   <import file="build-lib.xml"/>
   <import file="build-dist.xml"/>
 
+  <target name="pre-run-junit">
+    <mkdir dir="tmp/testing"/>
+  </target>
+
 </project>
