--- a/build.xml
+++ b/build.xml
@@ -1,4 +1,4 @@
-<project xmlns:ivy="antlib:org.apache.ivy.ant" name="TDB" default="main">
+<project xmlns:ivy="antlib:org.apache.ivy.ant" name="TDB" default="build">
 
   <!-- ========================================== -->
   <!-- ==== Configuration  -->
