--- a/build.xml
+++ b/build.xml
@@ -4,11 +4,12 @@
     <property name="name"            value="sdb"/>
     
     <!-- The major and minor version numbers  -->
-    <property name="version-major"   value="1"/>
-    <property name="version-minor"   value="2"/>
-    <property name="version-status"  value="-rc-1"/>
+    <property name="version-major"        value="1"/>
+    <property name="version-minor"        value="2"/>
+    <property name="version-revision"     value="0"/>
+    <property name="version-status"       value=""/>
     <property name="version"
-              value="${version-major}.${version-minor}${version-status}"/>
+              value="${version-major}.${version-minor}.${version-revision}${version-status}"/>
 
     <property name="dist.name"       value="${Name}-${version}"/>
     <property name="zipfile"         value="${name}-${version}.zip"/>
